# dotfiles

./: .bash_profile  .bashrc  .gitconfig  .gitignore  .gitmodules  .inputrc  .nanorc  .pre-commit-config.yaml  .prettierrc.yaml  .shellcheckrc  .typos.toml  .zsh_plugins.txt  .zshrc  CLAUDE.md  LICENSE  README.md  committed.toml  duties.py  install-config.yaml  install-linux.sh  install.sh  osx.sh  pyproject.toml
.github/workflows/: automated_tests.yml
.hooks/: README.md  pre-commit.sh
.librewolf/: librewolf.overrides.cfg
bootstrap/: bootstrap-linux.sh  config-linux-gnu.yaml  config-linux.sh  config-macOS.sh  config-macOS.yaml  config-symlinks.yaml  install-linux-gnu.sh  install-macOS.sh  linux-bootstrap.sh  linux-gnu-bootstrap.sh
bootstrap/config/: aptGet.yaml  homebrew.yaml  homebrewCasks.yaml  linux-gnu.yaml  node.yaml  ruby.yaml  symlinks.yaml
bootstrap/plugins/: 01-install-git-hooks.sh  02-install-gitFriendly.sh  03-set-default-shell.sh  04-set-osx-system-prefs.sh  05-configure-sublime-text-3.sh  06-configure-iTerm.sh  07-install-bats.sh  08-install-thefuck.sh  09-install-golang.sh  10-install-micro-editor.sh  configure-iTerm.sh  install-bats.sh  install-git-hooks.sh  install-gitFriendly.sh  set-default-shell.sh
config/bash/: 3rdParty.bash  aliases.bash  base.bash  colors.bash  directories.bash  editors.bash  files.bash  functions.bash  git.bash  history.bash  homebrew.bash  jekyll.bash  linux-gnu.bash  media.bash  networking.bash  osx.bash  prompt.bash  raspberryPi.bash  searching.bash  sourceFiles.bash  ssh.bash  synology.bash  text.bash  webdev.bash
config/dotfiles/: Brewfile  Gemfile  bash_profile  gemrc  gitconfig  lynx.lss  lynxrc  zshrc
config/iTerm/: com.googlecode.iterm2.plist  itermProfile.json  savedProfile.json
config/shell/: 3rdParty.config  3rdParty.sh  Brewfile  Gemfile  aliases.config  aliases.sh  bashOptions.bash  bash_profile  bashrc  completion.zsh  curlrc  directories.config  directories.sh  editors.config  editors.sh  files.config  functions.config  functions.sh  git.config  git.sh  gitattributes  gitconfig  gitignore  globalAliases.zsh  homebrew.config  homebrew.sh  inputrc  lesshst  linux-gnu.sh  linux.sh  media.sh  networking.config  networking.sh  osx.config  osx.sh  powerline.zsh  profile  prompt.bash  sourceFiles.config  sourceFiles.sh  (+5 more)
config/zsh/: 3rdParty.zsh  aliases.zsh  antibody.zsh  editors.zsh  functions.zsh  homebrew.zsh  networking.zsh  webdev.zsh
dotfiles/: .bash_profile  .bashrc  .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .chezmoiremove  .gitconfig  .prettierrc.yaml  .zshrc  dot_bashrc.tmpl  dot_curlrc  dot_gitconfig.tmpl  dot_nanorc.tmpl  dot_nd.toml.tmpl  dot_shellcheckrc.tmpl  dot_yamllint.yml.tmpl  dot_zshrc.tmpl  private_dot_git_stop_words.tmpl
dotfiles/.chezmoidata/: binaries.toml  constants.toml  onepassword.toml  packages.toml  remote_servers.toml  ssh_authorized_keys.toml  tool_configs.toml
dotfiles/.chezmoiscripts/: run_after_20-create-ssh-keys.sh.tmpl  run_after_30-atuin.sh.tmpl  run_after_30-install-eza.sh.tmpl  run_after_30-install-git-credential-manager.sh.tmpl  run_after_30-install-git-delta.sh.tmpl  run_after_30-install-lazygit.sh.tmpl  run_after_30-install-nanorc.sh.tmpl  run_after_30-install-otree.sh.tmpl  run_after_30-install-rip.sh.tmpl  run_after_30-install-vivid.sh.tmpl  run_after_30-link-fd.sh.tmpl  run_after_30-mise-tools.sh.tmpl  run_after_30_install-non-pkg-mngr-binaries.sh.tmpl  run_after_30_install-non-pkg-mngr-binaries.tmpl  run_after_40-install-nanorc.sh.tmpl  run_after_40-symlink-batcat.sh.tmpl  run_after_40-symlink-fd.sh.tmpl  run_after_50-iterm2.sh.tmpl  run_after_create-ssh-keys.sh.tmpl  run_after_delete-empty-library.sh.tmpl  run_after_iterm2.sh.tmpl  run_after_link-fd.sh.tmpl  run_before_00-install-pre-requisites.sh.tmpl  run_before_01-install-1password.sh.tmpl  run_before_02-uv.sh.tmpl  run_before_05-install-mise.sh.tmpl  run_before_30-install-zoxide.sh.tmpl  run_before_install-atuin.sh  run_before_install-atuin.sh.tmpl  run_before_install-zoxide.sh.tmpl  run_install_nanorc.sh  run_install_nanorc.sh.tmpl  run_once_after_30-install-nanorc.sh.tmpl  run_once_after_31-cleanup-legacy-binaries.sh.tmpl  run_once_after_99-updates-monthly.sh.tmpl  run_once_before_01-install-homebrew.sh.tmpl  run_once_before_02-install-uv.sh.tmpl  run_onchange_after_10-apt-packages.sh.tmpl  run_onchange_after_10_remove_packages.sh.tmpl  run_onchange_after_11-python-packages.sh.tmpl  (+5 more)
dotfiles/.chezmoitemplates/: halp_config.toml  shared_colors.bash  shared_script_utils.bash  usrbin_config.toml  vid-cleaner_config.toml  vscode_cursor_settings.json
dotfiles/.sed/: stopwords.sed
dotfiles/dot_claude/: symlink_CLAUDE.md.tmpl  symlink_commands.tmpl  symlink_hooks.tmpl  symlink_rules.tmpl  symlink_settings.json.tmpl  symlink_skills.tmpl
dotfiles/dot_librewolf/: executable_librewolf.overrides.cfg.tmpl
dotfiles/dot_shell/: 010-options.bash  010-options.zsh  020-prompt.bash  030-common_aliases.sh.tmpl  040-better-defaults.sh.tmpl  050-linux.sh.tmpl  050-macos.sh.tmpl  060-exports.sh.tmpl  090-homelab.sh.tmpl  090-personal.sh.tmpl
lib/: config-install.yaml  utils.sh
linuxSupport/: bootstrap-linux-user.sh  bootstrap-linux.sh
scripting/: .gitignore  scriptTemplate.sh  scriptTemplateSelfContained.sh
shell/: 3rdParty.sh  alerting.sh  aliases.sh  bashOptions.bash  colors.sh  completion.zsh  crowdsec.sh  directories.sh  editors.sh  files.sh  functions.sh  fzf.bash  git.sh  globalAliases.zsh  history.bash  history.zsh  homebrew.sh  iterm.sh  keybindings.zsh  linux.sh  media.sh  networking.sh  osx.sh  p10k.zsh  p9k.zsh_old  prompt.bash  python.sh  searching.sh  spaceshipPrompt.zsh  ssh.sh  sudo.sh  tailscale.sh  text.sh  webdev.sh
test/: arrays.bats  baseHelpers.bats  cleanFilenames.bats  config-linux.bats  config-macOS.bats  convertVideo.bats  dates.bats  files.bats  install-linux-gnu.bats  install-macOS.bats  install.bats  numbers.bats  scriptFunctions.bats  scriptTemplate.bats  services.bats  test.sh  textProcessing.bats  trash.bats  trash.old.bats  updateHomebrew.bats
(+225 files in other folders)
